<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Gruppe B Madbestillingsapp</string>
    <string name="login_number_hint">Nummer</string>
    <string name="login_login_button">Login</string>
    <string name="login_login_message_errorhashappend">Det er opstået en fejl</string>
    <string name="login_login_message_checkinternet">Tjek venligst din internet forbindelse</string>
    <string name="login_login_message_fillvalue">Udfyld venligst feltet</string>
    <string name="login_login_message_loginsuccesswithroomnumber">Logget ind med rum-nr: </string>
    <string name="login_login_checkbox_rememberroomnumber">Husk dette rum nr?</string>

    <string name="my_orders_title">Mine bestillinger</string>
    <string name="evening_menu_title">Aftens menu</string>

    <!--open close navigation drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Language -->
    <string name="language_danish">Dansk</string>
    <string name="language_english">Engelsk</string>
    <string name="language_arabic">Arabisk</string>

    <!-- Onboard screen -->
    <string name="onboard_first_title">Bestil frokost</string>
    <string name="onboard_first_desc">Du kan bestille fra din smartphone eller tablet.</string>
    <string name="onboard_second_title">Indflydelse</string>
    <string name="onboard_second_desc">Du kan vælge ret og brødtype.</string>
    <string name="onboard_third_title">Dagens menu</string>
    <string name="onboard_third_desc">Du kan se menuen for i aften.</string>

    <!-- Intro guide -->
    <string name="intro_guide_first_step_title">Første trin - vælg ret</string>
    <string name="intro_guide_first_step_desc">Vælg den ønskede ret ved at swipe til højre</string>
    <string name="intro_guide_second_step_title">Andet trin - vælg brødtype</string>
    <string name="intro_guide_second_step_desc">Vælg den ønskede brødtype</string>
    <string name="intro_guide_third_step_title">Tredje trin - tilføj til kurv</string>
    <string name="intro_guide_third_step_desc">Tilføj retten til kurven</string>
    <string name="intro_guide_fourth_step_title">Fjerde trin - gå til kurv</string>
    <string name="intro_guide_fourth_step_desc">Åbn kurven for at se dine bestillinger</string>
    <string name="intro_guide_last_step_title">Sidste trin - bestil maden</string>
    <string name="intro_guide_last_step_desc">Klik på bestil knappen for at afsende dine bestillinger.</string>

    <!-- Menu -->
    <string name="menu_shopping">Shop</string>
    <string name="cart_bestil">bestil</string>
    <string name="breadtype_dark">MØRK</string>
    <string name="breadtype_light">LYS</string>
    <string name="bread_type">Brødtype</string>

    <!-- Drawer menu -->
    <string name="drawermenu_header_institut">Ballerup Kommune</string>
    <string name="drawermenu_header_roomNumber">Rum-nr</string>
    <string name="drawermenu_my_profile">Min profil</string>
    <string name="drawermenu_menu_title">Menu</string>
    <string name="drawermenu_help_title">Hjælp</string>
    <string name="drawermenu_help_callassistance">Tilkald hjælp</string>
    <string name="drawermenu_menu_evening">Aftens menu</string>
    <string name="drawermenu_my_orders">Mine bestillinger</string>
    <string name="drawermenu_settings_language">Sprog</string>
    <string name="drawermenu_settings_voiceover">Oplæser</string>
    <string name="drawermenu_settings_miscsettings">Øvrige indstillinger</string>
    <string name="drawermenu_settings_title">Indstillinger</string>
    <string name="drawermenu_help_playintro">Afspil introduktion</string>
    <string name="drawermenu_logout_title">Log ud</string>
    <string name="drawermenu_language_title">Sprog</string>

    <!-- Settings screen -->
    <string name="settingsscreen_settings_roomNumber_Input_label">Indtast rum-nr.</string>
    <string name="settingsscreen_settings_label">Indstillinger</string>
    <string name="settingsscreen_settings_roomNumber">Rum-nr</string>
    <string name="settingsscreen_settings_roomNumber_summary">Rum-nr som anvendes til bestillinger.</string>
    <string name="settingsscreen_accessibility_label">Tilgængelighed</string>
    <string name="settingsscreen_accessibility_fontsize">Skrifttypestørrelse</string>
    <string name="settingsscreen_accessibility_fontsize_summary">Ændrer størrelsen på skrifttypen i appen.</string>
    <string name="settingsscreen_accessibility_voiceover">Oplæser</string>
    <string name="settingsscreen_accessibility_voiceover_summary">Aktiver oplæser i appen.</string>
    <string name="settingsscreen_display_label">Visning</string>
    <string name="settingsscreen_display_language">Sprog</string>
    <string name="settingsscreen_display_language_summary">Skift appens sprog.</string>
    <string name="settingsscreen_aboutapp_label">Om appen</string>
    <string name="settingsscreen_aboutapp_help">Hjælp</string>
    <string name="settingsscreen_aboutapp_help_summary">Hjælp til Madbestillingsappen.</string>
    <string name="settingsscreen_logout_label">Log ud</string>
    <string name="settingsscreen_logout_summary">Log ud af Madbestillingsappen.</string>
    <string name="settingsscreen_aboutapp_about">Om</string>
    <string name="settingsscreen_aboutapp_about_summary">Om Madbestillingsappen.</string>

    <!-- Main text -->
    <string name="action_added">Tilføjet til kurv</string>
    <string name="action_cart">Kurv</string>
    <string name="page_amountchosen">Antal Valgt</string>

    <!-- Cart screen -->
    <string name="cart_screen_title">Kurv</string>
    <string name="cart_screen_empty_text">Kurven er tom</string>

    <!-- Food -->
    <string name="page1_food_title">Skinke</string>
    <string name="page1_food_main">Skinkemad</string>
    <string name="page1_food_sub">Skinke, ærter og argurk</string>

    <string name="page2_food_title">Æg og rejer</string>
    <string name="page2_food_main">Æggemad</string>
    <string name="page2_food_sub">Æg, rejer og salat</string>

    <string name="page3_food_title">Rejer</string>
    <string name="page3_food_main">Rejemad</string>
    <string name="page3_food_sub">Rejer, dild og æg</string>

    <string name="page4_food_title">Laks</string>
    <string name="page4_food_main">Laksemad</string>
    <string name="page4_food_sub">Laks, dild og asparges</string>

    <string name="page5_food_title">Hamburgerryg</string>
    <string name="page5_food_main">Hamburgerryg</string>
    <string name="page5_food_sub">Hamburgerryg, radisser og salat</string>

    <string name="language_changed_setting">Sprog ændret. Genstart venligst applikationen.</string>
    <string name="startup_welcome">Velkommen.</string>

    <!-- SharedPreferences -->
    <string name="current_database_order">current_database_pref</string>
    <string name="current_order_pref">current_order_pref</string>
    <string name="cart_delete_all">Ryd alt</string>
    <string name="title_activity_my_orders_screen">Mine bestillinger</string>
    <string name="login_error_login" tools:ignore="MissingTranslation">Fejl ved login - prøv igen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" tools:ignore="MissingTranslation">Hello blank fragment</string>
    <string name="pref_settings" tools:ignore="MissingTranslation">settingsPref</string>
    <string name="mainscreen_loadingpage">Indlæser side</string>
</resources>
