<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item android:title="@string/drawermenu_my_profile">
        <menu>

            <group
                android:id="@+id/menu_bottom1"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_myOrders"
                    android:icon="@drawable/ic_archive_black_24dp"
                    android:title="@string/drawermenu_my_orders" />
            </group>
        </menu>
    </item>

    <item android:title="@string/drawermenu_menu_title">
        <menu>

            <group
                android:id="@+id/menu_bottom3"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_myEveningMenu"
                    android:icon="@drawable/ic_restaurant_menu_black_24dp"
                    android:title="@string/drawermenu_menu_evening" />
            </group>
        </menu>
    </item>

    <item android:title="@string/drawermenu_help_title">
        <menu>

            <group
                android:id="@+id/menu_bottom4"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_myHelp"
                    android:icon="@drawable/ic_help_black_24dp"
                    android:title="@string/drawermenu_help_callassistance" />
            </group>
        </menu>
    </item>


    <item android:title="Indstillinger">
        <menu>

            <group
                android:id="@+id/menu_bottom2"
                android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_mySettingsLanguage"
                    android:icon="@drawable/ic_language_black_24dp"
                    android:title="@string/drawermenu_settings_language" />
                <item
                    android:id="@+id/nav_mySettingsVoiceOverSwitch"
                    android:icon="@drawable/ic_record_voice_over_black_24dp"
                    android:title="@string/drawermenu_settings_voiceover"
                    app:actionViewClass="android.widget.CheckBox"/>

                <item
                    android:id="@+id/nav_mySettings"
                    android:icon="@drawable/ic_settings_applications_black_24dp"
                    android:title="@string/drawermenu_settings_miscsettings" />

            </group>
        </menu>
    </item>
</menu>