<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <android.support.v7.widget.CardView
            android:id="@+id/page2_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp"
            android:layout_gravity="center|top">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:id="@+id/page2_image"
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    android:background="@mipmap/food2" />

                <TextView
                    android:id="@+id/page2_title"
                    style="@style/CardView.title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/page2_image"
                    android:padding="8dp"
                    android:text="@string/page2_food_main" />

                <TextView
                    android:id="@+id/page2_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/page2_title"
                    android:paddingLeft="8dp"
                    android:text="@string/page2_food_sub" />
                <View
                    android:id="@+id/page2_dividerline"
                    android:layout_width="350dp"
                    android:layout_centerHorizontal="true"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_below="@id/page2_subtitle"
                    android:layout_marginTop="10dp">
                </View>

                <!-- Brødtype -->
                <TextView
                    style="@style/CardView.accented"
                    android:text="@string/bread_type"
                    android:id="@+id/page2_breadtype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/page2_dividerline"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    />

                <LinearLayout
                    android:id="@+id/page2_chiplayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="8dp"
                    android:layout_marginBottom="25dp"
                    android:layout_below="@id/page2_breadtype">

                    <android.support.design.chip.Chip
                        android:id="@+id/page2_lightbread"
                        style="@style/Theme.MaterialComponents.Light.NoActionBar"
                        android:text="@string/breadtype_light"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_marginEnd="16dp"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:checkable="true"/>

                    <android.support.design.chip.Chip
                        android:id="@+id/page2_darkbread"
                        style="@style/Theme.MaterialComponents.Light.NoActionBar"
                        android:text="@string/breadtype_dark"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="16dp"
                        android:checkable="true"/>
                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</LinearLayout>