<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <android.support.v7.widget.CardView
            android:id="@+id/page2_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp"
            android:layout_gravity="center|top">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:id="@+id/page4_image"
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    android:background="@drawable/food4" />

                <TextView
                    android:id="@+id/page4_title"
                    style="@style/CardView.title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/page4_image"
                    android:padding="8dp"
                    android:text="@string/page4_food_main" />

                <TextView
                    android:id="@+id/page4_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/page4_title"
                    android:paddingLeft="8dp"
                    android:text="@string/page4_food_sub" />
                <View
                    android:id="@+id/page4_dividerline"
                    android:layout_width="350dp"
                    android:layout_centerHorizontal="true"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_below="@id/page4_subtitle"
                    android:layout_marginTop="10dp">
                </View>

                <!-- Brødtype -->
                <TextView
                    style="@style/CardView.accented"
                    android:text="Brødtype"
                    android:id="@+id/page4_breadtype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/page4_dividerline"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    />

                <LinearLayout
                    android:id="@+id/page4_chiplayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="8dp"
                    android:layout_below="@id/page4_breadtype">

                    <android.support.design.chip.Chip
                        android:id="@+id/page4_lightbread"
                        style="@style/Theme.MaterialComponents.Light.NoActionBar"
                        android:text="@string/breadtype_light"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_marginEnd="16dp"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:checkable="true"/>

                    <android.support.design.chip.Chip
                        android:id="@+id/page4_darkbread"
                        style="@style/Theme.MaterialComponents.Light.NoActionBar"
                        android:text="@string/breadtype_dark"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="16dp"
                        android:checkable="true"/>
                </LinearLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/page4_amountlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/page4_chiplayout"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/page4_amountchosen"
                        style="@style/CardView.accented"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/page_amountchosen" />

                    <TextView
                        android:id="@+id/page4_amount"
                        android:layout_width="81dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:gravity="center_horizontal"
                        android:textSize="30sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.501"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.25"
                        android:text="0" />

                </android.support.constraint.ConstraintLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</LinearLayout>