<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".LoginScreen">

    <ImageView
        android:id="@+id/login_ballerup_logo2"
        android:layout_width="92dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="354dp"
        android:src="@drawable/ballerup"
        app:layout_constraintBottom_toTopOf="@+id/checkBox_rememberRoomNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_title"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="323dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView_flag_danish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        style="@style/accent_text"
        android:id="@+id/login_number"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:hint="@string/login_number_hint"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        style="@style/bold_text"
        android:id="@+id/login_button"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_design"
        android:elevation="4dp"
        android:textColor="@color/white"
        android:text="@string/login_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_number" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/login_animation_loading"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_number"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

    <ImageView
        android:id="@+id/imageView_flag_danish"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView_flag_english"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title"
        app:srcCompat="@mipmap/flag_danish" />

    <ImageView
        android:id="@+id/imageView_flag_english"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_flag_arabic"
        app:layout_constraintEnd_toStartOf="@+id/imageView_flag_arabic"
        app:layout_constraintStart_toEndOf="@+id/imageView_flag_danish"
        app:layout_constraintTop_toTopOf="@+id/imageView_flag_arabic"
        app:srcCompat="@mipmap/flag_english" />

    <ImageView
        android:id="@+id/imageView_flag_arabic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_flag_english"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_rememberRoomNumber"
        app:srcCompat="@mipmap/flag_uae" />

    <CheckBox
        style="@style/bold_text"
        android:id="@+id/checkBox_rememberRoomNumber"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="49dp"
        android:buttonTint="@color/colorPrimaryDark"
        android:checked="false"
        android:duplicateParentState="false"
        android:text="@string/login_login_checkbox_rememberroomnumber"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/imageView_flag_arabic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_ballerup_logo2" />

</android.support.constraint.ConstraintLayout>